--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "@svgdotjs/svg.js": "^3.1.2",
+    "@svgr/webpack": "^6.2.1",
     "body-parser": "^1.20.0",
+    "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -28,5 +32,11 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "engines": {
+    "node": "16.x"
+  },
+  "nodemonConfig": {
+    "ext": "js,json,jsx,html,css"
   }
 }
